# lc-signage

./: Cargo.toml  LICENSE  README.md  lc-signage.service
.github/workflows/: main.yml  release.yml
frontend/: README.md  TEMPLATE.html  lc-signage.css  lc-signage.js
hardware/: LiveSignAcrylicBlackFront.lbrn2  LiveSignAcrylicClearFront.lbrn2  LiveSignAcrylicLongSides.lbrn2  LiveSignAcrylicShortSides.lbrn2  LiveSignWoodBodyFrame.lbrn2  README.md  wpa_supplicant.conf
src/: lib.rs  main.rs
