[package]
name = "lc-signage"
version = "0.3.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
serde_json = "1.0.132"
serde = { version = "1.0.213", features = ["derive"] }
oauth2 = { version = "4.4.2", features = ["curl"] }
anyhow = "1.0.91"
chrono = "0.4.38"
home = "0.5.9"
systemd-journal-logger = "2.2.0"
log = "0.4.22"
config = { version = "0.15.0", features = ["toml"] }
reqwest = {version ="0.12.8", features = ["json"] }

[lints.clippy]
pedantic = "warn"
